# InsightArena

backend/: package.json
backend/src/admin/: admin.service.ts
backend/src/creator-events/: creator-events-predictions-stats.spec.ts  creator-events.module.ts  creator-events.service.spec.ts  creator-events.service.ts
backend/src/indexer/: indexer.module.ts  indexer.service.ts
backend/src/leaderboard/: leaderboard.controller.ts
backend/src/matches/: matches.controller.ts  matches.service.ts
backend/src/notifications/: notification-generator.service.ts  notifications.module.ts
creator-event-manager/: Cargo.toml
creator-event-manager/src/: finalize.rs  lib.rs  storage_types.rs  views.rs
creator-event-manager/test_snapshots/: test_double_exact_score_points.1.json  test_double_result_points.1.json  test_entry_fee_grows_prize_pool_before_finalize.1.json  test_join_happy_path.1.json  test_join_insufficient_funds.1.json  test_join_zero_fee.1.json  test_mixed_multiplier_event.1.json  test_not_found_event_prize_pool.1.json  test_post_finalize_prize_pool.1.json  test_post_join_prize_pool_growth.1.json  test_pre_join_prize_pool.1.json  test_remainder_goes_to_creator.1.json  test_triple_exact_score_points.1.json  test_wrong_prediction_with_multiplier.1.json
creator-event-manager/test_snapshots/test/: test_match_creation_and_management.1.json  test_match_predictions_timing.1.json  test_match_result_submission.1.json
creator-event-manager/tests/: finalize_tests.rs  oracle_tests.rs  prediction_tests.rs  views_tests.rs
frontend/: package-lock.json
(+16 files in other folders)
