[package]
name = "creator-event-manager"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[[test]]
name = "oracle_tests"
path = "tests/oracle_tests.rs"
required-features = ["testutils"]

[[test]]
name = "prediction_tests"
path = "tests/prediction_tests.rs"
required-features = ["testutils"]

[[test]]
name = "finalize_tests"
path = "tests/finalize_tests.rs"
required-features = ["testutils"]

[[test]]
name = "views_tests"
path = "tests/views_tests.rs"
required-features = ["testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true